# yay_front

./: .env.example  .gitignore  Cargo.toml  Untitled_009  Untitled_010  env.sh  interview_ao1btr.md  opc.md  test  test2
src/: main.rs
src/constants/: connection.rs
src/controllers/: mod.rs  my_web_controller.rs  static_controller.rs
src/extractors/: claims.rs  mod.rs  validation.rs
src/middleware_local/: err_handlers.rs  mod.rs
src/models/: types.rs
src/rustlings/: hr.rs  mod.rs  rustlings.rs
src/static/: auth0.hbs  banner.hbs  body.hbs  body_login.hbs  container.hbs  container_login.hbs  dynamic_content.hbs  enterprise_error_modal.hbs  footer.hbs  header.hbs  header_login.hbs  index.hbs  login.hbs  modals.hbs  navbar.hbs  navbar_login.hbs  user_delete_confirm_modal.hbs
src/utils/: env.rs  fs_utils.rs  mod.rs
static/scripts/: env_vars.js  footer.js  fsm.js  generate.js  header.js
static/styles/: styles.css
