[package]
name = "yay_front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-http = "3.7.0"
actix-rt = "2"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4.7.0"
actix-web-httpauth = "0.8.1"
actix_web_openidconnect = "0.1.2"
anyhow = "1.0.86"
awc = "3.5.0"
chrono = "0.4.37"
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.11.3"
handlebars = { version = "5.1.2", features = ["dir_source"] }
http = "1.1.0"
json = "0.12.4"
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
log = "0.4.21"
oauth2 = "4.4.2"
openidconnect = "3.5.0"
rand = "0.8.5"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.61"
time = "0.3.36"
url = "2.5.0"
uuid = "1.7.0"
validator = { version = "0.17.0", features = ["derive"] }

[profile.dev]
opt-level = 1
overflow-checks = true
